Update index.html with logo embed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <meta property="og:title" content="Hong Kong Post (ROBLOX)">
   <meta property="og:description" content="News website for the Hong Kong Post (ROBLOX)">
-  <meta property="og:image" content="images\hongkongpost.png">
+  <meta property="og:image" content="https://awesomevipman.github.io/newssite/images/hongkongpost.png">
 
 </head>
 
