--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <meta property="og:description" content="News website for the Hong Kong Post (ROBLOX)">
   <meta property="og:image" content="https://awesomevipman.github.io/newssite/images/hongkongpost.png">
 
+  
+  <meta name="twitter:card" content="Hong Kong Post (ROBLOX)">
+<meta name="twitter:title" content="News website for the Hong Kong Post (ROBLOX)">
+<meta name="twitter:description" content="News website for the Hong Kong Post (ROBLOX)">
+<meta name="twitter:image" content="https://awesomevipman.github.io/newssite/images/hongkongpost.png">
+
 </head>
 
 <body>
